k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devops-app
  namespace: demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: devops-app
  template:
    metadata:
      labels:
        app: devops-app
    spec:
      containers:
      - name: app
        image: ghcr.io/tistodev/devops-app:2c119524d289983adcbbe52e32f8f5231b588c1d
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: devops-app
  namespace: demo
spec:
  selector:
    app: devops-app
  ports:
  - port: 80
    targetPort: 3000
